--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
 
 					<i>bairaktari.k at northeastern dot edu</i><br>
 					Pronouns: she/her<br> <br>
-					I am a PhD student in the <a href = "https://www2.ccs.neu.edu/theory/">theory group </a> at Northeastern University, where I am advised by <a href="https://www.ccs.neu.edu/home/hlnguyen/">Huy Le Nguyen</a> and <a href="https://www.ccs.neu.edu/home/jullman/">Jonathan Ullman</a>.
-					My research interests are in differential privacy and algorithmic fairness.<br><br>
+					I am a PhD student in the <a href = "https://www2.ccs.neu.edu/theory/">theory group </a> at Northeastern University, where I am advised by <a href="https://www.ccs.neu.edu/home/hlnguyen/">Huy Le Nguyen</a> and <a href="https://www.ccs.neu.edu/home/jullman/">Jonathan Ullman</a>.<br><br>
 					Before joining Northeastern, I received my diploma in <a href="https://www.ece.ntua.gr/en">Electrical and Computer Engineering</a> from the National Technical University of Athens,
 					where I completed my thesis under the guidance of <a href = "https://www.softlab.ntua.gr/~fotakis/"> Dimitris Fotakis</a>.<br><br>
 				</p1>
