--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 					<i>bairaktari.k at northeastern dot edu</i><br>
 					Pronouns: she/her<br> <br>
-					I am a PhD student in the <a href = "https://www2.ccs.neu.edu/theory/">Computer Science Theory group </a> at Northeastern University, where I am advised by <a href="https://www.ccs.neu.edu/home/hlnguyen/">Huy Lê Nguyễn</a> and <a href="https://www.ccs.neu.edu/home/jullman/">Jonathan Ullman</a>. My research interests are in theoretical approaches to fairness in machine learning and data privacy.<br><br>
+					I am a PhD student in the <a href = "https://www2.ccs.neu.edu/theory/">Computer Science Theory Group </a> at Northeastern University, where I am advised by <a href="https://www.ccs.neu.edu/home/hlnguyen/">Huy Lê Nguyễn</a> and <a href="https://www.ccs.neu.edu/home/jullman/">Jonathan Ullman</a>. My research interests are in theoretical approaches to fairness in machine learning and data privacy.<br><br>
 					Before joining Northeastern, I received my diploma in <a href="https://www.ece.ntua.gr/en">Electrical and Computer Engineering</a> from the National Technical University of Athens.<br><br>
 				</p1>
 			</div>
@@ -29,7 +29,7 @@
 				<h2>Publications</h2>
 				<p1>
 					<b>Fair and Optimal Cohort Selection for Linear Utilities</b><br>
-					Konstantina Bairaktari, <a href="https://www.ccs.neu.edu/home/hlnguyen/">Huy Le Nguyen</a> and <a href="https://www.ccs.neu.edu/home/jullman/">Jonathan Ullman</a><br>
+					Konstantina Bairaktari, <a href="https://www.ccs.neu.edu/home/hlnguyen/">Huy Lê Nguyễn</a> and <a href="https://www.ccs.neu.edu/home/jullman/">Jonathan Ullman</a><br>
 					<i>Manuscript (in submission)</i> (2021)<br>
 					<a href="https://arxiv.org/abs/2102.07684">[preprint]</a><br><br>
 				</p1>
