--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
 		<div id="publications" class="row padded wholecol">
 				<h2>Publications</h2>
 				<p1>
-					<b>Fair and Optimal Cohort Selection for Linear Utilities</b><br>
-					Konstantina Bairaktari, <a href="https://www.ccs.neu.edu/home/hlnguyen/">Huy Lê Nguyễn</a> and <a href="https://www.ccs.neu.edu/home/jullman/">Jonathan Ullman</a><br>
-					<i>Manuscript (in submission)</i> (2021)<br>
+					<b>Fair and Useful Cohort Selection</b><br>
+					Konstantina Bairaktari, Paul Langton, <a href="https://www.ccs.neu.edu/home/hlnguyen/">Huy Lê Nguyễn</a>, Niklas Smedemark-Margulies and <a href="https://www.ccs.neu.edu/home/jullman/">Jonathan Ullman</a><br>
+					<i>Manuscript</i> (2022)<br>
 					<a href="https://arxiv.org/abs/2102.07684">[preprint]</a><br><br>
 				</p1>
 		</div>
