--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 				<h2>Publications</h2>
 				<p1>
 					<b>Fair and Useful Cohort Selection</b><br>
-					Konstantina Bairaktari, Paul Langton, <a href="https://www.ccs.neu.edu/home/hlnguyen/">Huy Lê Nguyễn</a>, Niklas Smedemark-Margulies and <a href="https://www.ccs.neu.edu/home/jullman/">Jonathan Ullman</a><br>
+					Konstantina Bairaktari, Paul Langton, <a href="https://www.ccs.neu.edu/home/hlnguyen/">Huy Lê Nguyễn</a>,<a href="https://nik-sm.github.io/"> Niklas Smedemark-Margulies</a> and <a href="https://www.ccs.neu.edu/home/jullman/">Jonathan Ullman</a><br>
 					<i>Manuscript</i> (2022)<br>
 					<a href="https://arxiv.org/abs/2009.02207">[preprint]</a><br><br>
 				</p1>
