--- a/index.html
+++ b/index.html
@@ -28,10 +28,16 @@
 		<div id="publications" class="row padded wholecol">
 				<h2>Publications</h2>
 				<p1>
+					<b>Multitask Learning via Share Features: Algorithms and Hardness</b><br>
+					Konstantina Bairaktari, <a href="https://web.stanford.edu/~gblanc/"> Guy Blanc</a>, <a href="http://theory.stanford.edu/~liyang/">Li-Yang Tan</a>,<a href="https://www.ccs.neu.edu/home/jullman/">Jonathan Ullman</a> and <a href="https://www.ccs.neu.edu/home/lydiazak/">Lydia Zakynthinou</a><br>
+					<i>Preprint</i> (2022)<br>
+					<a href="https://arxiv.org/abs/2209.03112">arXiv</a><br><br>
+				</p1>
+				<p1>
 					<b>Fair and Useful Cohort Selection</b><br>
 					Konstantina Bairaktari, Paul Langton, <a href="https://www.ccs.neu.edu/home/hlnguyen/">Huy Lê Nguyễn</a>,<a href="https://nik-sm.github.io/"> Niklas Smedemark-Margulies</a> and <a href="https://www.ccs.neu.edu/home/jullman/">Jonathan Ullman</a><br>
-					<i>Manuscript</i> (2022)<br>
-					<a href="https://arxiv.org/abs/2009.02207">[preprint]</a><br><br>
+					<i>Preprint</i> (2022)<br>
+					<a href="https://arxiv.org/abs/2009.02207">arXiv</a><br><br>
 				</p1>
 		</div>
 	</div>
