Update about seminar

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 					Pronouns: she/her<br> <br>
 					I am a PhD student in the <a href = "https://www2.ccs.neu.edu/theory/">Computer Science Theory Group </a> at Northeastern University, where I am advised by <a href="https://www.ccs.neu.edu/home/hlnguyen/">Huy Lê Nguyễn</a> and <a href="https://www.ccs.neu.edu/home/jullman/">Jonathan Ullman</a>. My research interests are in theoretical approaches to fairness in machine learning and data privacy.<br><br>
 					Before joining Northeastern, I received my diploma in <a href="https://www.ece.ntua.gr/en">Electrical and Computer Engineering</a> from the National Technical University of Athens, where I completed my thesis under the guidance of <a href="https://www.softlab.ntua.gr/~fotakis/">Dimitris Fotakis</a>.<br><br>
+					I co-organize the <a href="https://www2.ccs.neu.edu/theory/seminar.html">Northeastern Theory Seminar</a>.<br>
 				</p1>
 			</div>
 		</div>
