--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 				<p1>
 					<b>Multitask Learning via Shared Features: Algorithms and Hardness</b><br>
 					Konstantina Bairaktari, <a href="https://web.stanford.edu/~gblanc/"> Guy Blanc</a>, <a href="http://theory.stanford.edu/~liyang/">Li-Yang Tan</a>, <a href="https://www.ccs.neu.edu/home/jullman/">Jonathan Ullman</a> and <a href="https://www.ccs.neu.edu/home/lydiazak/">Lydia Zakynthinou</a><br>
-					<i>Preprint</i> (2022)<br>
+					<i>Conference on Learning Theory</i> (COLT 2023)<br>
 					<a href="https://arxiv.org/abs/2209.03112">arXiv</a><br><br>
 				</p1>
 				<p1>
