--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 				<p1>
 					<b>Fair and Useful Cohort Selection</b><br>
 					Konstantina Bairaktari, Paul Langton, <a href="https://www.ccs.neu.edu/home/hlnguyen/">Huy Lê Nguyễn</a>,<a href="https://nik-sm.github.io/"> Niklas Smedemark-Margulies</a> and <a href="https://www.ccs.neu.edu/home/jullman/">Jonathan Ullman</a><br>
-					<i>Preprint</i> (2022)<br>
+					<i>Transactions on Machine Learning Research</i> (TMLR 2023)<br>
 					<a href="https://arxiv.org/abs/2009.02207">arXiv</a><br><br>
 				</p1>
 		</div>
