--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 			<div class="column smallcol center">
 				<img src="images/me.jpg" alt="Konstantina Bairaktari" style="width:80%">
 			</div>
+
 			<div id="about" class="column bigcol">
 				<h1>Konstantina Bairaktari</h1>
 				<p1>
@@ -29,16 +30,21 @@
 		<div id="publications" class="row padded wholecol">
 				<h2>Publications</h2>
 				<p1>
+					<b>Metalearning with Very Few Samples Per Task</b><br>
+					<a href="https://maryamaliakbarpour.com/">Maryam Aliakbarpour</a>, Konstantina Bairaktari, <a href="https://cs-people.bu.edu/grbrown/"> Gavin Brown</a>, <a href="https://cs-people.bu.edu/ads22/">Adam Smith</a> and <a href="https://www.ccs.neu.edu/home/jullman/">Jonathan Ullman</a><br>
+					<a href="https://arxiv.org/abs/2312.13978">[paper]</a><br><br>
+				</p1>
+				<p1>
 					<b>Multitask Learning via Shared Features: Algorithms and Hardness</b><br>
 					Konstantina Bairaktari, <a href="https://web.stanford.edu/~gblanc/"> Guy Blanc</a>, <a href="http://theory.stanford.edu/~liyang/">Li-Yang Tan</a>, <a href="https://www.ccs.neu.edu/home/jullman/">Jonathan Ullman</a> and <a href="https://www.ccs.neu.edu/home/lydiazak/">Lydia Zakynthinou</a><br>
 					<i>Conference on Learning Theory</i> (COLT 2023)<br>
-					<a href="https://arxiv.org/abs/2209.03112">arXiv</a><br><br>
+					<a href="https://arxiv.org/abs/2209.03112">[paper]</a><br><br>
 				</p1>
 				<p1>
 					<b>Fair and Useful Cohort Selection</b><br>
 					Konstantina Bairaktari, Paul Langton, <a href="https://www.ccs.neu.edu/home/hlnguyen/">Huy Lê Nguyễn</a>,<a href="https://nik-sm.github.io/"> Niklas Smedemark-Margulies</a> and <a href="https://www.ccs.neu.edu/home/jullman/">Jonathan Ullman</a><br>
 					<i>Transactions on Machine Learning Research</i> (TMLR 2023)<br>
-					<a href="https://arxiv.org/abs/2009.02207">arXiv</a><br><br>
+					<a href="https://arxiv.org/abs/2009.02207">[paper]</a><br><br>
 				</p1>
 		</div>
 	</div>
