--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
 				<h2>Publications</h2>
 				<p1>
 					<b>Metalearning with Very Few Samples Per Task</b><br>
-					<a href="https://maryamaliakbarpour.com/">Maryam Aliakbarpour</a>, Konstantina Bairaktari, <a href="https://cs-people.bu.edu/grbrown/"> Gavin Brown</a>, <a href="https://cs-people.bu.edu/ads22/">Adam Smith</a> and <a href="https://www.ccs.neu.edu/home/jullman/">Jonathan Ullman</a><br>
+					<a href="https://maryamaliakbarpour.com/">Maryam Aliakbarpour</a>, Konstantina Bairaktari, <a href="https://cs-people.bu.edu/grbrown/"> Gavin Brown</a>, <a href="https://cs-people.bu.edu/ads22/">Adam Smith</a>, <a href="https://nati.ttic.edu/">Nathan Srebro</a> and <a href="https://www.ccs.neu.edu/home/jullman/">Jonathan Ullman</a><br>
+					<i>Conference on Learning Theory</i> (COLT 2024)<br>
 					<a href="https://arxiv.org/abs/2312.13978">[paper]</a><br><br>
 				</p1>
 				<p1>
