--- a/index.html
+++ b/index.html
@@ -30,6 +30,11 @@
 		<div id="publications" class="row padded wholecol">
 				<h2>Publications</h2>
 				<p1>
+					<b>Privacy in Metalearning and Multitask Learning: Modeling and Separations</b><br>
+					<a href="https://maryamaliakbarpour.com/">Maryam Aliakbarpour</a>, Konstantina Bairaktari, <a href="https://cs-people.bu.edu/ads22/">Adam Smith</a>, <a href = "https://sites.google.com/bu.edu/marika/home"> Marika Swanberg</a> and <a href="https://www.ccs.neu.edu/home/jullman/">Jonathan Ullman</a><br>
+					<a href="https://arxiv.org/abs/2412.12374">[paper]</a><br><br>
+				</p1>
+				<p1>
 					<b>Metalearning with Very Few Samples Per Task</b><br>
 					<a href="https://maryamaliakbarpour.com/">Maryam Aliakbarpour</a>, Konstantina Bairaktari, <a href="https://homes.cs.washington.edu/~grbrown/"> Gavin Brown</a>, <a href="https://cs-people.bu.edu/ads22/">Adam Smith</a>, <a href="https://nati.ttic.edu/">Nathan Srebro</a> and <a href="https://www.ccs.neu.edu/home/jullman/">Jonathan Ullman</a><br>
 					<i>Conference on Learning Theory</i> (COLT 2024)<br>
