--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 				<p1>
 					<b>Privacy in Metalearning and Multitask Learning: Modeling and Separations</b><br>
 					<a href="https://maryamaliakbarpour.com/">Maryam Aliakbarpour</a>, Konstantina Bairaktari, <a href="https://cs-people.bu.edu/ads22/">Adam Smith</a>, <a href = "https://sites.google.com/bu.edu/marika/home"> Marika Swanberg</a> and <a href="https://www.ccs.neu.edu/home/jullman/">Jonathan Ullman</a><br>
+					<i>International Conference on Artificial Intelligence and Statistics</i> (AISTATS 2025)<br>
 					<a href="https://arxiv.org/abs/2412.12374">[paper]</a><br><br>
 				</p1>
 				<p1>
@@ -48,7 +49,7 @@
 				</p1>
 				<p1>
 					<b>Fair and Useful Cohort Selection</b><br>
-					Konstantina Bairaktari, Paul Langton, <a href="https://www.ccs.neu.edu/home/hlnguyen/">Huy Lê Nguyễn</a>,<a href="https://nik-sm.github.io/"> Niklas Smedemark-Margulies</a> and <a href="https://www.ccs.neu.edu/home/jullman/">Jonathan Ullman</a><br>
+					Konstantina Bairaktari, Paul Langton, <a href="https://www.ccs.neu.edu/home/hlnguyen/">Huy Le Nguyen</a>,<a href="https://nik-sm.github.io/"> Niklas Smedemark-Margulies</a> and <a href="https://www.ccs.neu.edu/home/jullman/">Jonathan Ullman</a><br>
 					<i>Transactions on Machine Learning Research</i> (TMLR 2023)<br>
 					<a href="https://arxiv.org/abs/2009.02207">[paper]</a><br><br>
 				</p1>
