--- a/index.html
+++ b/index.html
@@ -30,6 +30,11 @@
 		<div id="publications" class="row padded wholecol">
 				<h2>Publications</h2>
 				<p1>
+					<b>Kandinsky Conformal Prediction: Beyond Class- and Covariate-Conditional Coverage</b><br>
+					Konstantina Bairaktari, <a href="https://ic-hub.github.io//">Jiayun Wu</a> and <a href = "https://zstevenwu.com/">Zhiwei Steven Wu</a><br>
+					<a href="https://arxiv.org/abs/2502.17264">[paper]</a><br><br>
+				</p1>
+				<p1>
 					<b>Privacy in Metalearning and Multitask Learning: Modeling and Separations</b><br>
 					<a href="https://maryamaliakbarpour.com/">Maryam Aliakbarpour</a>, Konstantina Bairaktari, <a href="https://cs-people.bu.edu/ads22/">Adam Smith</a>, <a href = "https://sites.google.com/bu.edu/marika/home"> Marika Swanberg</a> and <a href="https://www.ccs.neu.edu/home/jullman/">Jonathan Ullman</a><br>
 					<i>International Conference on Artificial Intelligence and Statistics</i> (AISTATS 2025)<br>
