--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 				<p1>
 					<b>Kandinsky Conformal Prediction: Beyond Class- and Covariate-Conditional Coverage</b><br>
 					Konstantina Bairaktari, <a href="https://ic-hub.github.io//">Jiayun Wu</a> and <a href = "https://zstevenwu.com/">Zhiwei Steven Wu</a><br>
+					<i>International Conference on Machine Learning</i> (ICML 2025)<br>
 					<a href="https://arxiv.org/abs/2502.17264">[paper]</a><br><br>
 				</p1>
 				<p1>
