--- a/index.html
+++ b/index.html
@@ -30,6 +30,12 @@
 		<div id="publications" class="row padded wholecol">
 				<h2>Publications</h2>
 				<p1>
+					<b>Sample-efficient Multiclass Calibration under L_p Error</b><br>
+					Konstantina Bairaktari and <a href = "https://www.ccs.neu.edu/home/hlnguyen/">Huy Le Nguyen</a><br>
+					Preprint<br>
+					<a href="https://arxiv.org/abs/2509.23000">[paper]</a><br><br>
+				</p1>
+				<p1>
 					<b>Kandinsky Conformal Prediction: Beyond Class- and Covariate-Conditional Coverage</b><br>
 					Konstantina Bairaktari, <a href="https://ic-hub.github.io//">Jiayun Wu</a> and <a href = "https://zstevenwu.com/">Zhiwei Steven Wu</a><br>
 					<i>International Conference on Machine Learning</i> (ICML 2025)<br>
